--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,27 +1,42 @@
 @charset "UTF-8";
-
-p{
+p {
     text-align: justify;
     text-indent: 50px;
 }
-body{
-    background-color: white;
-    color: rgba(0, 0, 0,1);
+
+body {
+    background-color: #dddddd;
+    color: rgba(0, 0, 0, 1);
+}
+
+header#cabecalho img#icone {
+    position: absolute;
+    left: 1280px;    
+    top: 40px;
+}
+
+div#interface {
+    width: 900px;
+    background-color: #ffffff;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
+    padding: 10px;
 }
 
 /* formatacao de imagens com legendas*/
+
 figure.foto-legenda {
     position: relative;
     border: 8px solid white;
     box-shadow: 1px 1px 4px black;
 }
 
-figure.foto-legenda img{
+figure.foto-legenda img {
     width: 100%;
     height: 100%;
 }
 
-figure.foto-legenda figcaption{
+figure.foto-legenda figcaption {
     opacity: 0;
     position: absolute;
     top: 0px;
@@ -34,6 +49,46 @@ figure.foto-legenda figcaption{
     transition: opacity 1s;
 }
 
-figure.foto-legenda:hover figcaption{
+figure.foto-legenda:hover figcaption {
     opacity: 1;
+}
+
+/* Formatacao do menu*/
+
+nav#menu {
+    display: block;
+}
+
+nav#menu ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 750px;
+}
+
+nav#menu li {
+    display: inline-block;
+    background-color: #dddddd;
+    padding: 10px;
+    margin: 2px;
+    transition: background-color 1s;
+}
+
+nav#menu li:hover {
+    background-color: #606060;
+}
+
+nav#menu h1 {
+    display: none;
+}
+
+nav#menu a {
+    color: #000000;
+    text-decoration: none;
+}
+
+nav#menu a:hover {
+    color: #ffffff;
+    text-decoration: underline;
 }
