--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
-@font-face{
+@font-face {
     font-family: 'FonteLogo';
     src: url("../_fonts/bubblegum-sans-regular.otf");
 }
@@ -119,5 +119,77 @@ nav#menu a {
 
 nav#menu a:hover {
     color: #ffffff;
+    text-decoration: underline;
+}
+
+section#corpo {
+    display: block;
+    width: 510px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding: 15px;
+}
+
+table#tabelaspec {
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table#tabelaspec td {
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+table#tabelaspec td.ce {
+    color: #ffffff;
+    background-color: #606060;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+table#tabelaspec td.cd {
+    background-color: #cecece;
+}
+
+table#tabelaspec caption{
+    font-size: 13pt;
+    color: #888888;
+    font-weight: bolder;
+}
+
+table#tabelaspec caption span{
+    display: block;
+    font-size: 8pt;
+    color: #000000;
+    float: right;
+    margin-top: 10px;
+}
+
+aside#lateral {
+    display: block;
+    width: 350px;
+    float: right;
+}
+
+footer#rodape {
+    clear: both;
+    border-top: 1px solid #606060;
+}
+
+footer#rodape p {
+    text-align: center;
+}
+
+footer#rodape a {
+    color: #000000;
+    text-decoration: none;
+}
+
+footer#rodape a:hover {
+    color: blue;
     text-decoration: underline;
 }
